Revert "Finally fixed the search bug on mobile device"
This reverts commit a57921497d256366c338cb3082680f85678b143f.

--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,6 @@
 
 button {
     @apply cursor-pointer;
-    outline: none;
-    -webkit-tap-highlight-color: transparent;
-      
 }
 
 h-center {
